fix fonts not showing, add space between EE and 9, use text-primary

--- a/less/styles.less
+++ b/less/styles.less
@@ -27,10 +27,6 @@
   color: @brand-secondary;
 }
 
-.text-orange {
-  color: @brand-primary;
-}
-
 .heading-underline {
   text-transform:none;
 }
